# HFF

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements-datasets.txt  requirements-notebooks.txt
benchmark/: DYNAMIC_GROUPS_USAGE.md  HFRanking_doc.md  README.md  USAGE_GUIDE.md  benchmark_gnbg_implementations.py  benchmark_gnbg_quick.py  benchmark_gnbg_realistic.py  benchmark_scaling_trends.py  compare_optimizations.py  corrected_igd_benchmark.py  debug_batch_extraction.py  debug_group_assignment.py  debug_hf1.py  debug_hf1_core.py  debug_hf3.py  debug_parallel_runner.py  debug_parallel_sequential.py  debug_path.py  design_overlap_formula.py  distributed_parquet_logger.py  requirements.txt  run_500.sh  run_wfg1_3.py  run_wfg4_9_higd.py  side_by_side_comparison.py  test_dtlz2_simple.py  test_gpu_acceleration.py  test_hf1_evolution.py  test_hf3_fix.py  test_new_overlap_formula.py  test_normalization_fix.py  test_parallel_method.py  test_prenormalized_data.py  test_rhf3_simple.py  test_single_experiment.py  verify_dynamic_groups.py  wfg_pareto_fronts.py
benchmark/hyperspherical_fitness_pymoo/: __init__.py  algorithm.py  algorithm_warp_cdf.py  hf2_algorithm.py  survival.py  survival_warp_cdf.py
benchmark/hyperspherical_fitness_pymoo/logging/: parquet_logger.py
benchmark/hyperspherical_fitness_pymoo/parallel/: gpu_accelerated.py
benchmark/hyperspherical_fitness_pymoo/problems/: composable.py  gnbg2_wrapper.py
benchmark/hyperspherical_fitness_pymoo/tests/: test_basic.py
docs/: PHASE_TWO_BENCHMARK_PLAN.md  POST_SNAP_FOLD.md  R0_failure_report.md  R0_rule_candidates.md  TWO_PART_SIMPLIFY.md  feynman_recovery_learnings.md
include/: hff.h
notebooks/: OurWorkToday.md  _chromosome_ensemble.py  _denoise_op.py  _drive_rule_discovery.py  _e22_phase4.sh  _e22_runner.py  _engine_compare.py  _engine_pendulum.py  _engine_tecator.py  _fold_op.py  _gene_decompose.py  _gene_utils.py  _karva_corpus.py  _karva_rewriter.py  _lsm_snap.py  _make_failure_report.py  _mine_karva_rules.py  _physics_op.py  _recovery.py  _replay_snap_ab.py  _review_sweep.py  _snap_op.py  _srbench_122_sweep.py  _sweep_equation_recovery.py  _sympy_to_karva.py  _test_ensemble.py  _test_gene_compress.py  _test_gene_compress_purpose.py  _test_karva_corpus.py  _test_karva_rewriter.py  _test_linker_compress.py  _test_pairwise_rule.py  _test_real_chromosome_compress.py  _tiny_sweep.py  _trace_snap_pendulum.py  _wild_smoke.py  equation_problems.py  feynman_problems.py  hff_geppy_helpers.py  hff_sr_engine.py  (+14 more)
papers/: hff-gecco2026-poster_Submitted.tex
python/hff/: __init__.py  core.py
srbench_submission/algorithms/hff-sr/: environment.yml  install.sh  metadata.yml  regressor.py
src/: c_api.rs  core_functions.rs  gpu.rs  higd.rs  lib.rs
