[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hff"
version = "0.1.0"
description = "Hyperspherical Fitness Functions for many-objective optimization"
authors = [{name = "Andrew Morgan", email = "andrew@gamakon.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/Gamakon/HFF"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "hff.hff_core"
