[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hff"
version = "0.1.0"
description = "Hyperspherical Fitness Functions for many-objective optimization"
authors = [{name = "Andrew Morgan", email = "andrew@gamakon.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.23",
]

# Optional dependency groups. Install with pip:  pip install -e ".[notebooks]"
# or with any PEP 621-aware tool (poetry, uv, pdm). The base package (the `hff`
# core) needs only numpy; the groups below are for the demonstration notebooks
# and the benchmark harness.
[project.optional-dependencies]
# fuller (github.com/Gamakon/fuller, MIT): egglog-backed symbolic operators
# — physics-prior mutation, behaviour-preserving denoise, named-constant
# snap. The SR engine detects it at runtime and no-ops cleanly without it;
# install this extra to enable those operators.
fuller = [
    "fuller>=0.1",
]
# Demonstration notebooks (symbolic regression / classification).
notebooks = [
    "geppy>=0.1.3",
    "deap>=1.4",
    "multiprocess>=0.70",
    "scikit-learn>=1.2",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "graphviz>=0.20",
    "sympy>=1.12",
    "scipy>=1.10",
    "numexpr>=2.8",
    "numba>=0.58",
]
# Extra datasets used by the equation-recovery notebook (PMLB / Feynman loaders).
datasets = [
    "pmlb>=1.0",
]
# pymoo benchmark harness. NOTE: pymoo 0.6.x calls np.row_stack, removed in
# numpy 2.0 — pin numpy<2 for the NSGA-II/III baselines. The GNBG problems
# additionally need the `gnbg_gpu` crate (github.com/Gamakon/GNBG-II),
# which is not on PyPI; install it separately or set GNBG_GPU_PATH.
benchmark = [
    "pymoo>=0.6,<0.7",
    "numpy<2.0",
    "pandas>=1.5",
    "pyarrow>=12",
]
# Everything for notebooks + datasets in one shot.
all = [
    "hff[notebooks,datasets]",
]

[project.urls]
Repository = "https://github.com/Gamakon/HFF"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "hff.hff_core"
